fix: fix loading button loader style on Safari

--- a/components/Button/Button.css
+++ b/components/Button/Button.css
@@ -52,6 +52,9 @@
 
   &__loader {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   /*============================
